@@ -1,5 +1,7 @@
 3.0.4
 Issue #2349 Run-AlCops/Extract-AppFileToFolder fail if runtime is >=8.0 and no ResourceExposurePolicy is set
+Stop treating AL1026 warning as error by default
+Support for application dependency in Sort-AppFoldersByDependencies
 
 3.0.3
 Issue #2303 Get-BestGenericImageName sometimes returns an image which is newer than the host OS
